--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U app"]
+      test: [ "CMD-SHELL", "pg_isready -U app" ]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -22,5 +22,7 @@ services:
         condition: service_healthy
     environment:
       DATABASE_URL: postgresql+asyncpg://app:app@db:5432/app
+    volumes:
+      - ./src:/app/src
     ports:
       - "8000:8000"
